# dreamer-sidekick

./: .gitignore  CLAUDE.md  README.md  main.py  mkdocs.yml  pyproject.toml  serve.py  sync.sh
docs/: index.md
docs/tools/: ai-ml.md  apis-integrations.md  browser-semantic-history.md  code-analysis.md  data-processing.md  devops-infra.md  document-processing.md  search-research.md  visualization.md  web-scraping.md
tests/: test_browser_semantic_history.py  test_docs_structure.py
tools/: browser_semantic_history
tools/browser-semantic-history/: __init__.py  browsers.py  chromium_extractor.py  pgvector_store.py  schema.sql
